fix: scrollbar time duratin

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@ body {
 }
 
 * {
-  transition: all 0.1s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .layout {
